[tool.poetry]
name = "benchllama"
version = "0.1.0"
description = ""
authors = ["Srikanth Srungarapu <srikanth235@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
benchllama = "benchllama.main:app"

[tool.poetry.dependencies]
python = "^3.6"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
