[tool.poetry]
name = "benchllama"
version = "0.2.0"
description = ""
authors = ["Srikanth Srungarapu <srikanth235@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
benchllama = "benchllama.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}
ollama = "^0.1.6"
pandas = "^2.2.0"
datasets = "^2.17.0"
joblib = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
